--- a/styles/world.css
+++ b/styles/world.css
@@ -1,3 +1,7 @@
+body {
+  mix-blend-mode: difference;
+}
+
 .noise::before {
   position: fixed;
   top: 0;
@@ -5,9 +9,21 @@
   width: 100vw;
   height: 100vh;
   content: '';
-  /* you can control opacity of noise  */
   opacity: 0.1;
   z-index: 1000;
   pointer-events: none;
   background: url('/noise.gif');
+}
+
+.cusCur {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #b6b6b6;
+  mix-blend-mode: difference;
+  z-index: 100000000000000;
 }
